# ESP32-Wifi-Map

./: .gitignore  AGENTS.md  README.md  capture.py  firmware_header.txt  heatmap.py  monitor.py  platformio.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: monitor-deferred.md
docs/plans/: 2026-06-25-radio-monitor-design.md  2026-06-25-radio-monitor-impl.md
src/: debounced_button.cpp  debounced_button.h  io_abstractions.cpp  main.cpp  wifi_scan_util.cpp  wifi_scan_util.h
test/test_wifi_scan_util/: test_auth_mode_string.cpp  test_copy_label.cpp  test_csv_escape.cpp  test_main.cpp  test_monitor_tick.cpp  test_rssi_to_distance.cpp
test/test_wifi_scan_util/native_compat/: Arduino.h  WiFi.h
tests/: test_capture.py  test_device_tracker.py  test_heatmap.py  test_live.py  test_merge.py  test_monitor.py  test_timeseries.py
tools/: check_schema.py  sync_firmware_header.py
wifiscan/: __init__.py  device_tracker.py  live.py  merge.py  schema.py  timeseries.py
