[project]
name = "wifi-scanner-signal-map"
version = "0.1.0"
description = "ESP32 Wi-Fi scanner signal map: capture RSSI samples over serial and render heatmaps."
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "pandas>=2",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wifiscan"]  # #6 added this package; capture.py / heatmap.py stay as top-level CLI scripts.

[tool.mypy]
# Type-check the Python tooling (wifiscan package + the top-level
# capture.py / heatmap.py scripts) so drift in the schema module —
# the firmware/Python contract source of truth — is caught before it
# filters through to capture, heatmap, merge, and live.
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
files = ["wifiscan", "capture.py", "heatmap.py"]
